# ChangeLog for app-admin/kemerge
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/app-admin/kemerge/Attic/ChangeLog,v 1.3 2002/07/30 22:10:39 danarmak Exp $

*kemerge-0.6 (30 Jul 2002)

  30 Jul 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :

  New version. Closes #5787.

*kemerge-0.5 (28 Jul 2002)

  28 Jul 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :

  New version. No longer depends on kebuild and kebuildpart, which ahe been
  integrated into the kemerge package. This closes #4870.

* kemerge-0.4 (18 April 2002)

  18 April 2002; Bart Verwilst <verwilst@gentoo.org> ChangeLog :
  
  Updated to new version, removed old one...
  Various new features added..
