@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/kemerge
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-admin/kemerge/Attic/ChangeLog,v 1.3 2002/07/30 22:10:39 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/kemerge/Attic/ChangeLog,v 1.4 2002/08/06 22:27:25 danarmak Exp $
+
+*kemerge-0.7 (07 Aug 2002)
+
+  07 Aug 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :
+
+  New upstream version. Closes #6088.
 
 *kemerge-0.6 (30 Jul 2002)
 
